# nandemo-deepl

./: .gitignore  Makefile  README.md  alias.sh  nandemo.py  pyproject.toml  setup.py
nandemo/: __main__.py  md.py  rst.py  utils_deepl.py
sample/: sample.md
samples/: sample-ast.json  sample-result-ja.md  sample.md
